ecmascript/parser/tests/typescript-errors/tsc/externalModules/initializersInDeclarations/input.ts.stderr
error: An implementation cannot be declared in ambient contexts
 --> $DIR/tests/typescript-errors/tsc/externalModules/initializersInDeclarations/input.ts:8:16
  |
8 |     fn(): boolean {
  |                   ^

